<resources>
    <string name="app_name">SideBit</string>

    <string name="hello_world">Welcome to SideBit!</string>

    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="messmenu">MessMenu</string>
    <string name="citycinema">CityCinema</string>
    <string name="campusdeals">CampusDeals</string>
    <string name="campusupdates">CampusEvents</string>
    <string name="jaipurevents">JaipurEvents</string>
    <string name="photography">Photography</string>
    <string name="library">Library</string>
    <string name="pyp">PYP</string>
    <string name="menu">Menu</string>
    <string name="like">Like App</string>
    <string name="placementquiz">PlacementQuiz</string>
    <string name="title_activity_notification">Notification</string>
    <string name="notify">Your Notification !</string>
    <string name="helpy">Help...</string>
    <string name="abouty">App for Amity University Students</string>
    <string name="accounty">Sign in with Facebook</string>
    <string name="liky">Rate the App</string>
    <string name="messy">Mess Menu</string>
    <string name="citycinemy">Upcoming Movies in Jaipur:</string>
    <string name="dealy">Sell and Buy used goods:</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_like_app">LikeApp</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_mess_menu">MessMenu</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_city_cinema">CityCinema</string>
    <string name="title_activity_campus_deals">CampudDeals</string>
</resources>
