<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/help"
          android:title="@string/help"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/notification"
          android:icon="@drawable/ic_notifications_white_24dp"
          android:title="@string/menu"
          app:showAsAction="ifRoom"  />
    <item android:id="@+id/account"
          android:icon="@drawable/ic_account_circle_white_24dp"
          android:title="@string/menu"
          app:showAsAction="ifRoom"  />
    <item android:id="@+id/like"
          android:icon="@drawable/ic_favorite_white_24dp"
          android:title="@string/like"
          app:showAsAction="ifRoom"  />
    <item android:id="@+id/about"
          android:title="@string/about"
          android:orderInCategory="100"
          app:showAsAction="never"/>



</menu>
